<resources>
    <string name="app_name">Shreyansh</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_name">Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="big_text">Android introduced fragments in Android 3.0 (API level 11), primarily to support more dynamic and flexible UI designs on large screens, such as tablets. Because a tablet\'s screen is much larger than that of a handset, there\'s more room to combine and interchange UI components. Fragments allow such designs without the need for you to manage complex changes to the view hierarchy. By dividing the layout of an activity into fragments, you become able to modify the activity\'s appearance at runtime and preserve those changes in a back stack that\'s managed by the activity.</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="submit">Submit</string>
    <string name="rate_person">Please Rate The Person</string>
    <string name="rate">Rate him/her</string>
    <string name="last_name">Last Name : </string>
    <string name="first_name">First Name : </string>
    <string name="title_activity_style_two">StyleTwo</string>
    <string name="title_activity_async_task_example">AsyncTaskExample</string>
    <string name="title_activity_fragment">Fragment</string>
    <string name="count_number">Count Number</string>
    <string name="stop">Stop</string>
    <string name="tilt">Tilt phone to see the magic !!</string>
    <string name="read">Read Text</string>
    <string name="yo">yo</string>
    <string name="cancel">X</string>

    <string name="get_contacts">Get Contacts</string>
    <string name="get_apps">Get Apps</string>
    <string name="start_service">Start Service</string>
    <string name="title_activity_activity2">Activity2</string>

</resources>
