<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.shreyansh.layouts.AsyncTaskExample">

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/button"
        android:text="@string/count_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/button2"
        android:text="@string/stop"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty"
        android:onClick="onButtonStop"/>

    <TextView
        style="@style/TextStyle"
        android:id="@+id/tv"
        android:layout_marginTop="@dimen/fifty"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        />

</RelativeLayout>
