<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:text="@string/rate_person"
                android:textSize="@dimen/text_eighteen" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/twenty">

            <TextView
                android:text="@string/first_name"
                android:textSize="@dimen/text_eighteen" />

            <EditText
                android:id="@+id/first_name"
                android:layout_weight="1"
                android:width="@dimen/twenty"
                android:inputType="text" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/last_name"
                android:textSize="@dimen/text_eighteen" />

            <EditText
                android:id="@+id/last_name"
                android:layout_weight="1"
                android:width="@dimen/twenty"
                android:inputType="text" />
        </TableRow>


        <RelativeLayout android:layout_width="fill_parent">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/rate"
                android:textSize="@dimen/text_eighteen" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1"
                android:layout_centerHorizontal="true"
                android:numStars="5" />

        </RelativeLayout>

        <!--<TableRow>

            <Button
                android:layout_width="wrap_content"
                android:onClick="onClickButton"
                android:text="@string/submit" />
        </TableRow>-->
    </TableLayout>
</ScrollView>
